Wed Sep  6 17:57:33 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Add gtkdoc-scangobj scanner for
	GObject type system.

	* gtkdoc-scanobj.in: Allow setting $LD to allow separating
	compilation and linking and thus to allow using libtool.

	* gtkdoc-fixxref.in (ScanIndices): Allow HTMLDIR
	not to be present yet.

Tue Sep  5 23:37:53 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-fixxref.in: Add a --extra-dir option to
	allow scanning of additional uninstalled HTML
	directories.

	* gtkdoc-scan.in (ScanHeaders): Honor subdirectories
	appearing in --ignore-headers.

	* gtkdoc-mkdb.in: Append -CAPS to all all-caps identifiers
	to prevent an infinite expansion of special cases. 

	* gtkdoc-fixxref.in: Add a --module-dir option to
	allow fixing references in an uninstalled tree.

	* gtkdoc-mkdb.in gtkdoc-mkhtml.in: Simple handling
	for macros with embedded commas in enumeration 
	declarations.

Mon Aug 28 18:18:53 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in (DSSSL_DIR): Remove check for AM_PATH_GTK
	since the dependency is only run-time not install-time,
	and to avoid dependency loops.

2000-06-21  Damon Chaplin  <damon@helixcode.com>

	* gtkdoc-mkdb.in: fixed <INCLUDES> bug, I think.

Wed Feb  9 11:29:25 2000  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scan.in: Hack to avoid misidentifying structures
	as GtkObjects within Pango.

1999-12-15  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk-doc.dsl.in ($generate-chapter-toc$): Add missing close
	paranthesis. 

1999-11-23  Raja R Harinath  <harinath@cs.umn.edu>

	* gtk-doc.dsl.in: Use the (define (foo) ...) syntax rather than
	the uglier (define foo (lambda () ...)) syntax.
	($generate-chapter-toc$): Simplify.
	($shade-verbatim-attr$): Simplify.  Use ($table-width$) instead of
	"100%" for width (See docs. of NWalsh Docbook DSSSL Stylesheets
	for an explanation).

1999-09-20  Damon Chaplin  <damon@karuna.freeserve.co.uk>
